<package format="2">
  <name>foobar</name>
  <version>1.2.4</version>
  <description>
  This package should run on lightsensor container.
  </description>
  <maintainer email="gerni@student.ethz.ch">PR-foobar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
